# modern-graphics

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  Makefile  PLAN_DESIGN_REVIEW_AGENT.md  PLAN_IMPROVE_ELEMENT_PARSER.md  PLAN_README_SIMPLIFICATION.md  PLAN_SVG_JS_INTEGRATION.md  PLAN_SVG_JS_METHOD_IMPROVEMENTS.md  README.md  REVIEW_SYSTEM_SUMMARY.md  TEST_RESULTS_SUMMARY.md  WHEN_TO_USE_SVG_JS.md  generate  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ADVANCED.md  AI_TEMPLATE_CREATION.md  API.md  CONCEPTS.md  CONTRIBUTING.md  CREATE_COMMAND.md  CUSTOM_THEMES.md  DEPRECATION_POLICY.md  DIAGRAM_TYPES.md  EXPORT.md  HERO_SLIDES.md  MCP_SERVER.md  MERMAID.md  MIGRATION.md  OVERHAUL_PHASE1_PR_SUMMARY.md  OVERHAUL_SPEC.md  OVERHAUL_WORKPLAN.md  PROMPTS.md  PROMPT_BEST_PRACTICES.md  PROMPT_EXAMPLES.md  PROMPT_PATTERNS.md  QUICKSTART.md  RADAR_DIAGRAM.md  README.md  README_REFACTOR_PLAN.md  SVG_COMPOSITION.md  TROUBLESHOOTING.md  USE_CASES.md  WIREFRAME_SCENE_SPEC.md
examples/: FILE_CATEGORIZATION.md  GENERATE_EXAMPLES.md  PROMPTS_USED.md  PROMPT_BASED_USE_CASES.md  README.md  VIEW_OUTPUTS.md  ai_assisted_template.py  all_diagram_types.py  attribution_examples.py  auth_sequence.mmd  auth_sequence_oauth.mmd  chart_bar.py  chart_cohort.py  chart_donut.py  chart_grouped_bar.py  chart_grouped_stacked_bar.py  chart_horizontal_bar.py  chart_line.py  chart_pie.py  chart_sankey.py  chart_stacked_area.py  chart_stacked_bar.py  color_scheme_generator_demo.py  corporate_hero_theme_demo.py  create_team_scheme.py  custom_diagram.py  custom_mockup_slide_cards_demo.py  custom_template.py  customize_auth_sequence.py  postit_flow.mmd  (+24 more)
(+196 files in other folders)
